--- a/recruit-gui/src/app/suggestions/candidate-profile/candidate-profile.component.css
+++ b/recruit-gui/src/app/suggestions/candidate-profile/candidate-profile.component.css
@@ -115,3 +115,9 @@ suggestion-perception-excellent{
 	background:grey;
 	display:inline-block;
 }
+
+.notes-textarea{
+	width:95%;
+	overflow: auto;
+	min-height:130px;
+}
