--- a/recruit-gui/src/app/create-candidate/create-candidate.component.html
+++ b/recruit-gui/src/app/create-candidate/create-candidate.component.html
@@ -114,7 +114,9 @@
 							network of recruiters and clients. 
 							</p>
 							<div>
-								<button (click)="addCandidate()" [disabled]="uploadButtonDisabled()" class="btn btn-secondary arenella-btn" style="margin-bottom:20px;">Save</button>
+								<div class="action-buttons">
+									<button (click)="addCandidate()" [disabled]="uploadButtonDisabled()" class="btn btn-secondary arenella-btn">Save</button>
+								</div>
 							</div>
 						</div>
 					</div>
