--- a/recruit-gui/src/app/candidate-info-box/candidate-info-box.component.css
+++ b/recruit-gui/src/app/candidate-info-box/candidate-info-box.component.css
@@ -84,3 +84,13 @@
 	margin-bottom:10px;
 	background:green;
 }
+
+@media ( max-width :700px) {
+	.no-profile-photo-mobile{
+		display:none;
+	}
+	
+	.profile-photo-details{
+		display:none;
+	}
+}
