--- a/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.css
+++ b/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.css
@@ -81,3 +81,17 @@
 	padding-bottom:50px;
 	max-width:720px;
 }
+
+@media ( max-width :700px) {
+	.recruiter-signup-panel{
+		width:100%;
+		margin-top:50px;
+		margin-left:0%;
+		margin-right:0%;
+		margin-bottom:50px;
+	}
+	.arenella-btn{
+		margin-top:20px;
+		width:200px
+	}
+}
