bug fixes layout

--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
@@ -300,7 +300,7 @@
 				<!-- Left Pane -->
 				<app-candidate-info-box [config]="infoItemConfig" (openContactBoxEvent)="contactRecruiter()"></app-candidate-info-box>
       		</div>
-			<div class="desc-body {{mobileDescBody}}">
+			<div class="right-body-pane">
       			<div class="listing-view-div">
 					<h1 *ngIf="!isMobile" class="listing-view-title">{{activeOpenPosition.positionTitle}}</h1>
 					<h1 *ngIf="isMobile" class="listing-view-title">Description</h1>
