--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
@@ -61,7 +61,7 @@
 				
 				<app-candidate-info-box [config]="infoItemConfig"></app-candidate-info-box>
 					
-	        	<div style="float:left;margin-left:15px;min-width:300px;max-width:72%;padding:5px;">
+	        	<div class="right-body-pane">
 	        		<div class="listing-view-div">
 						<h1 *ngIf="!isMobile" class="listing-view-title">{{selectedListing.title}}</h1>
 						<h1 *ngIf="isMobile" class="listing-view-title">Description</h1>
